<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_news"
        android:checked="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/menu_attendance"
        android:checked="true"
        android:icon="@drawable/ic_attendance"
        android:title="@string/attendance" />
    <item
        android:id="@+id/menu_notes"
        android:checked="true"
        android:icon="@drawable/it_notes"
        android:title="@string/notes" />

    <item
        android:id="@+id/menu_fees"
        android:checked="true"
        android:icon="@drawable/ic_fees"
        android:title="@string/fess_register" />
    <item
        android:id="@+id/menu_support"
        android:checked="true"
        android:icon="@drawable/ic_support"
        android:title="@string/support" />
    <item
        android:id="@+id/menu_about"
        android:checked="true"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
</menu>